test/sema/typeck/ref/ref-with-type-params.dora
fn test() {
    let foo: Int32 = 42;
    let x = ref foo[Int32];
}
